--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <div class="form-group">
           <label for="exampleFormControlSelect1">Voice Select</label>
           <select class="form-control" id="exampleFormControlSelect1" name="voiceSelect">
-            <option value ="en-IN-Standard-C">Indian Male</option>
-            <option value ="en-AU-Wavenet-C">Australian Female</option>
-            <option value="en-GB-Standard-B">British Male</option>
-            <option value="en-US-Standard-B">US Male</option>
+            <option>Indian Male</option>
+            <option>Austrailian Female</option>
+            <option>British Male</option>
+            <option>US Male</option>
           </select>
         </div>
     
