--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                   <span class="sr-only">(current)</span>
                 </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="gtts-tool.ejs">GTTS-Tool</a>
+          </li>
           
         </ul>
       </div>
